# Solimouv

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GUIDE.md  README.md  fly.toml  render.yaml
src/: main.rs
static/: manifest.json  robots.txt  sw.js
static/css/: style.css
static/js/: app.js
templates/: about.html  associations.html  base.html  carte.html  club.html  home.html  programme.html
